[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ScenePlayer.gd" type="Script" id=1]
[ext_resource path="res://src/Characters/CharacterDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/img/industrial-building.jpg" type="Texture" id=3]
[ext_resource path="res://src/TextBox.tscn" type="PackedScene" id=4]

[node name="ScenePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterDisplay" parent="." instance=ExtResource( 2 )]

[node name="TextBox" parent="." instance=ExtResource( 4 )]
